Last commit reverted and added extra height for titles on IE. It turns out I unleashed the dreaded 'peakaboo' IE bug.
git-svn-id: http://svn.resourcespace.org/svn/resourcespace@1574 c08608d7-6e46-0410-86ca-f2a6f1370df5

--- a/css/globalIE.css
+++ b/css/globalIE.css
@@ -6,6 +6,7 @@ body {width:97.5%;font-size: 70%;}
 #SearchBox { position: relative; margin-left: 0; }
 .SearchSpace .SearchWidth {width: 155px; }
 .HomePanel {margin:0px 15px 7px 0px;} 
+.RecordHeader h1 {height:35px;}
 .StyledTabbedPanel div { position: relative; display: inline-block; }
 #RecordDownload { margin-right: 10px; }
 
